<resources>
    <string name="app_name">My Application</string>
    <string name="permission_not_available_message">You have previously denied %s. Please go to settings to enable.</string>
    <string name="permission_not_available_open_settings_option">Settings</string>
    <string name="permission_not_available_title">%s Not Available</string>
    <string name="pleaseclickemojis">Please select an icon to describe your experience. You can click to select happy or sad face.</string>
    <string name="privacypolicy">Privacy Policy</string>

    <string name="quicktutorial">Quick Tutorial</string>
    <string name="rateNow">Rate Now !</string>
    <string name="rateus">Rate us</string>
    <string name="rateuslongtext">We\'ve already helped you download more than two videos! Want to rate us and share a helpful comment?</string>
    <string name="remindmelater">Remind me later</string>
    <string name="removeAds">Remove Ads</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="shareapp">Share this application</string>
    <string name="shareimage">Share Image</string>
    <string name="sharevideo">Share Video</string>
    <string name="skip">Skip</string>
    <string name="smile_rating_bad">Bad</string>
    <string name="smile_rating_good">Good</string>
    <string name="smile_rating_great">Great</string>
    <string name="smile_rating_okay">Okay</string>
    <string name="smile_rating_terrible">Terrible</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="success">Successful</string>
    <string name="swipe">Swipe</string>
    <string name="thankyouwegot">Thanks. We got your feedback!</string>
    <string name="tutorial0head">Permissions</string>
    <string name="tutorial0sentences">Permissions are required to use all the features of the application.</string>
    <string name="tutorial1head">Method - 1</string>
    <string name="tutorial1sentences">Copy link of tweet. Click paste button. Click download.</string>
    <string name="tutorial2head">Method - 2</string>
    <string name="tutorial2sentences">Click open Twitter button. Find Tweet. Click Share with. Select this app. Click download</string>
    <string name="tutorial3head">Any further questions?</string>
    <string name="tutorial3sentences">Do not hesitate to click feedback button on the menu.</string>
    <string name="videodownloaded">Media downloaded successfully.</string>
    <string name="waittofind">Please wait. We are searching for medias.</string>
    <string name="warning">Warning</string>
    <string name="website">byteBitTech.com</string>
    <string name="wewillnotask">We are not going to ask this from anywhere.</string>
    <string name="Downloads">Downloads</string>
    <string name="GalleryActivityBottomBanner">ca-app-pub-4346076281424407/2797401301</string>
    <string name="GalleryActivityInter">ca-app-pub-4346076281424407/8581400391</string>
    <string name="MainBottomAds">ca-app-pub-4346076281424407/5578302188</string>
    <string name="OnClickButtonDown">ca-app-pub-4346076281424407/5359630248</string>
    <string name="OnClickInsideDown">ca-app-pub-4346076281424407/8488711681</string>
    <string name="look_no_create_post_by">Click the tutorial to learn how to download</string>
    <string name="create_post">No downloads yet.</string>
    <string name="mainActivityDialogBanner">ca-app-pub-4346076281424407/5875346008</string>
    <string name="pastebutton">Paste</string>
    <string name="pasted">Link pasted.</string>
    <string name="pastelink">Paste link here.</string>
    <string name="download">Download</string>
    <string name="downloadablemedias">Downloadable medias.</string>
    <string name="last3downloads">Your last 3 downloads.</string>
    <string name="gallery">Open Gallery</string>
    <string name="email">bytebittech1@gmail.com</string>
    <string name="exit">Exit</string>
    <string name="guide">Guide</string>
    <string name="dontremind">Do not ask again.</string>
    <string name="morethantwovideos">More than 2 videos</string>
    <string name="itemremovedalready">This file has been deleted.</string>
    <string name="itemdeletedexternal">This file seems to have been deleted with an intervention from outside the application.</string>
    <string name="notextfound">We can not find link in your share.</string>
    <string name="emptyclipboard">Clipboard is empty</string>
    <string name="error">Error !</string>
    <string name="notalink">This is not a link. Copy link of the tweet.</string>
    <string name="cantfindtweet">We cant find tweet on your link.</string>
    <string name="nopastedtext">There is no copied data. Please copy link first.</string>
    <string name="loading">Loading</string>
    <string name="image">Image</string>
    <string name="nomediaontweet">We could not find any downloadable content on this link.</string>
    <string name="notweetfounded">Are you sure that this link is also a content? We did not find anything. Do not forgot only Twitter links are accepted.</string>
    <string name="onairtweetcantdownload">Videos generated by live broadcast cannot be downloaded. We are sorry not a problem caused by us.</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="okay">Okay</string>
    <string name="appID">ca-app-pub-3940256099942544~3347511713</string>
</resources>