<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/downloadsOption"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Downloads" />
    </group>
    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/guideOption"-->
<!--            android:icon="@drawable/ic_question_mark"-->
<!--            android:title="@string/guide"-->
<!--            app:actionLayout="@layout/menu_counter" />-->
        <item
            android:id="@+id/shareOption"
            android:icon="@drawable/ic_share_icon"
            android:title="@string/shareapp"
            app:actionLayout="@layout/menu_counter" />
        <item
            android:id="@+id/rateOption"
            android:icon="@drawable/ic_star_icon"
            android:title="@string/rateus"
            app:actionLayout="@layout/menu_counter" />
        <item
            android:id="@+id/privacyOption"
            android:icon="@drawable/ic_lock_icon"
            android:title="@string/privacypolicy"
            app:actionLayout="@layout/menu_counter" />
        <item
            android:id="@+id/exitOption"
            android:icon="@drawable/ic_exit_icon"
            android:title="@string/exit"
            app:actionLayout="@layout/menu_counter" />
    </group>
</menu>
