<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/customAccent"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/stars"
                app:layout_anchor="@+id/frame23"
                app:layout_anchorGravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/morethantwovideos"
                android:textColor="@color/customAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/rateuslongtext"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                app:placeHolderSmileColor="@color/mygra1"
                app:textNonSelectionColor="@color/mygra2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/remindlater"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_corner4"
                    android:gravity="center"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/remindmelater"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/ratenow"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_corner"
                    android:gravity="center"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/rateNow"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Button
                android:id="@+id/dontaskagain"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black"
                android:text="@string/dontremind"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@color/fontColor" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
