<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mygra1">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:orientation="vertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search"
        android:layout_gravity="center_vertical"
        android:background="@drawable/mainpageshape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/search_main"
                    style="@style/CustomText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_corner7"
                    android:focusableInTouchMode="true"
                    android:hint="@string/pastelink"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:minHeight="50dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_corner4"
                        android:onClick="pasteClick"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="12dp"
                        android:text="@string/pastebutton"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_corner4"
                        android:onClick="downloadClick"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:singleLine="true"
                        android:text="@string/download"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/removeAds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/btn_corner4"
                    android:onClick="removeAds"
                    android:singleLine="true"
                    android:text="@string/removeAds"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/AdView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    app:adSize="LARGE_BANNER"
                    app:adUnitId="@string/MainBottomAds" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/indirilenler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/last3downloads"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_corner4"
                        android:onClick="openGallery"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:singleLine="true"
                        android:text="@string/gallery"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="275dp"
                    android:layout_height="275dp"
                    android:layout_gravity="center"
                    android:alpha="0.75"
                    android:src="@drawable/background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:padding="5dp"
                    android:text="@string/create_post"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/fontColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="5dp"
                    android:text="@string/look_no_create_post_by"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/fontColor" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>