<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient_background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:onClick="backClick"
                android:scaleX="-1"
                android:src="@drawable/right_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/Downloads"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tb"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="55dp"
            android:background="@drawable/mainpageshape"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/indirilenler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="275dp"
                    android:layout_height="275dp"
                    android:layout_gravity="center"
                    android:alpha="0.75"
                    android:src="@drawable/astronaut" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:padding="5dp"
                    android:text="@string/create_post"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/fontColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="5dp"
                    android:text="@string/look_no_create_post_by"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/fontColor" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/GalleryActivityBottomBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="@string/GalleryActivityBottomBanner" />
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>
