<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/kapsar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:padding="@dimen/activity_horizontal_margin2"
                android:text="@string/quicktutorial"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/swipe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/swipe"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tab_main2"
            android:layout_below="@+id/kapsar"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/skiptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tab_main2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/skip"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tab_main2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin3"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_main2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:tabBackground="@drawable/tab_selector2"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabPaddingEnd="7.5dp"
            app:tabPaddingStart="7.5dp" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
